# pydantic-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  ruff.toml  setup.cfg  update_version.py
pre_commit_hooks/: pydantic_to_json.py  pydantic_to_schema.py
