[metadata]
name = pre_commit_hooks
version=file: .version
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mermeid-Designs/pre-commit-hooks
author = Mermeid Designs
author_email = mermeiddesigns@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy


[options]
packages = find:
install_requires =
    pydantic
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pydantic-to-json = pre_commit_hooks.pydantic_to_json:main
    pydantic-to-schema = pre_commit_hooks.pydantic_to_schema:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
